@startuml

class PriorityMailItem
class StorageTube
class MailItem
class MailGenerator
interface IMailDelivery
interface IMailPool
class MailPool
interface IRobotBehaviour
class SimpleRobotBehaviour
class SmartRobotBehaviour
class Simulation
class Robot
class Automail
class Building
class Clock

PriorityMailItem -|> MailItem: extend
IMailDelivery "1" ...> "1" MailItem: use
IMailPool "1" ..> "1" MailItem: use
Simulation "1" ---> "0..*" MailItem: has
Simulation "1" ..> "1" MailGenerator: use
Simulation "1" ..> "1" Automail: use
Automail "1" --> "1" IMailPool: has
Automail "1" ..> "1" IRobotBehaviour: use
Automail "1" *---> "1" Robot: create & use
Automail "1" .> "1" IMailDelivery: use
Robot "1" ------> "1" IRobotBehaviour: has
Robot "1" ---> "1" IMailDelivery: has
Robot "1" ----> "1" IMailPool: has
Robot "1" ---> "1" MailItem: has
Robot "1" *-----> "1" StorageTube: create & has
IRobotBehaviour "1" ..> "1" IMailPool: use
IRobotBehaviour "1" ..> "1" StorageTube: use
SimpleRobotBehaviour ..|> IRobotBehaviour: implement
SmartRobotBehaviour ..|> IRobotBehaviour: implement
SimpleRobotBehaviour "1" ---> "1" StorageTube: use
SmartRobotBehaviour "1" -----> "1" StorageTube: use
SimpleRobotBehaviour "1" -----> "1" IMailPool: use
SmartRobotBehaviour "1" -----> "1" IMailPool: use
MailGenerator "1" ---> "1" IMailPool: use
MailGenerator "1" ---> "0..*" MailItem: create & has
MailGenerator "1" ..> "0..*" PriorityMailItem: create
MailPool "1" ---> "0..*" PriorityMailItem: has
MailPool "1" ---> "0..*" MailItem: has
MailPool ..|> IMailPool: implement
StorageTube "1" -----> "0..*" MailItem: has

Simulation "1" ..> "1" Building: use
Robot "1" ..> "1" Building: use
MailGenerator "1" ..> "1" Building: use
MailGenerator "1" ..> "1" Clock: use
Robot "1" ..> "1" Clock: use
Simulation "1" ..> "1" Clock: use
SimpleRobotBehaviour "1" ..> "1" Clock: use
SmartRobotBehaviour "1" ..> "1" Clock: use


@enduml